--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "start": "node build/prod-server.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "spa-server": "^1.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
