--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,9 @@
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
+      "plugins": [
+        ["istanbul", { "useInlineSourceMaps": false }]
+      ]
     }
   }
 }
