--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "node build/dev-server.js",
     "start": "node build/prod-server.js",
     "build": "node build/build.js",
-    "test": "wprun -c build/webpack.base.conf.js -r ./util/test_helper.js src/**/*.test.js | tap-spec",
-    "test:watch": "wprun -w -c build/webpack.base.conf.js -r ./util/test_helper.js src/**/*.test.js | tap-spec",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint src/.",
+    "test": "NODE_ENV=test wprun -c build/webpack.base.conf.js -r ./util/test_helper.js src/**/*.test.js | tap-spec",
+    "test:watch": "NODE_ENV=test wprun -w -c build/webpack.base.conf.js -r ./util/test_helper.js src/**/*.test.js | tap-spec",
+    "test:coverage": "nyc -r text -r html npm test",
+    "coverage": "npm run test:coverage && open coverage/index.html",
+    "ci": "npm run lint && npm run test:coverage"
   },
   "dependencies": {
     "browser-env": "^2.0.31",
-    "spa-server": "^1.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
@@ -24,6 +26,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -40,7 +43,7 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
@@ -63,10 +66,18 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
-    "wprun": "^1.0.1"
+    "wprun": "^1.0.2"
   },
   "engines": {
     "node": ">= 8.0.0",
     "npm": ">= 5.0.0"
+  },
+  "nyc": {
+    "all": true,
+    "sourceMap": false,
+    "instrument": true,
+    "check-coverage": true,
+    "statements": 100,
+    "include": [ "src/*" ]
   }
 }
