--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ci": "npm run lint && npm run test:coverage"
   },
   "dependencies": {
-    "browser-env": "^2.0.31",
+    "connect-history-api-fallback": "^1.3.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
@@ -31,8 +31,8 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "browser-env": "^2.0.31",
     "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
@@ -49,6 +49,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "nyc": "^11.0.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
@@ -78,6 +79,8 @@
     "instrument": true,
     "check-coverage": true,
     "statements": 100,
-    "include": [ "src/*" ]
+    "include": [
+      "src/*"
+    ]
   }
 }
