Fix sourcemaps in tests and some config cleanup
babel-loader has a bug which breaks sourcemaps. This uses a fork where
I've fixed the problem.

--- a/.babelrc
+++ b/.babelrc
@@ -6,10 +6,7 @@
   "plugins": ["transform-runtime"],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": [
-        ["istanbul", { "useInlineSourceMaps": false }]
-      ]
+      "plugins": ["istanbul"]
     }
   }
 }
