--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "avoriaz": "^2.2.1",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-core": "^6.25.0",
+    "babel-loader": "git+https://github.com/chrisnicola/babel-loader.git#fix-sourcemaps",
     "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-stage-2": "^6.24.1",
     "browser-env": "^2.0.31",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -62,9 +60,9 @@
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
     "wprun": "^1.0.2"
@@ -82,5 +80,10 @@
     "include": [
       "src/*"
     ]
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ]
 }
