--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
   "plugins": ["transform-runtime"],
   "env": {
     "test": {
+      "presets": ["env", "stage-2"],
       "plugins": ["istanbul"]
     }
   }
