--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ci": "npm run lint && npm run test:coverage"
   },
   "dependencies": {
+    "babel-loader": "^7.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
@@ -24,7 +25,6 @@
     "autoprefixer": "^6.7.2",
     "avoriaz": "^2.2.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "git+https://github.com/chrisnicola/babel-loader.git#fix-sourcemaps",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
