--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^6.7.2",
     "avoriaz": "^2.2.1",
     "babel-core": "^6.25.0",
+    "babel-loader": "file://packages/babel-loader-7.1.0.tgz",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
@@ -45,7 +46,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.29.0",
     "http-proxy-middleware": "^0.17.3",
     "nyc": "^11.0.2",
     "opn": "^4.0.2",
