Babel parser for ESLint

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^6.7.2",
     "avoriaz": "^2.2.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "file://packages/babel-loader-7.1.0.tgz",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
