--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-loader": "^7.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
