--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.29.0",
     "http-proxy-middleware": "^0.17.3",
+    "make-dir": "^1.0.0",
     "nyc": "^11.0.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -57,6 +58,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sinon": "^2.3.6",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "url-loader": "^0.5.8",
