--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-loader": "^7.1.0",
+    "babel-register": "^6.24.1",
     "connect-history-api-fallback": "^1.3.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
