--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
+      "plugins": [["istanbul", { "useInlineSourceMaps": false }]],
+      "sourceMaps": "inline"
     }
   }
 }
