--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "vue-loader": "12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
@@ -79,9 +79,9 @@
     "npm": ">= 5.0.0"
   },
   "nyc": {
-    "all": true,
-    "sourceMap": false,
-    "instrument": true,
+    "all": false,
+    "sourceMap": true,
+    "instrument": false,
     "check-coverage": true,
     "statements": 100,
     "include": [
