Fix for Home.vue beforeRouteEnter
beforeRouteEnter does not have access to `this` so we need to pass a
callback to `next()` instead.

Also:
- Fixes sourcemap lines during tests
- Delete empty file
- Add redirect plugin for router

--- a/.babelrc
+++ b/.babelrc
@@ -7,8 +7,7 @@
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
-      "plugins": [["istanbul", { "useInlineSourceMaps": false }]],
-      "sourceMaps": "inline"
+      "plugins": [["istanbul", { "useInlineSourceMaps": false }]]
     }
   }
 }
