--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "ci": "npm run lint && npm run test:coverage"
   },
   "dependencies": {
-    "babel-register": "^6.24.1",
     "connect-history-api-fallback": "^1.3.0",
-    "vue": "^2.3.3",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.3.1"
+    "express": "^4.15.3",
+    "http": "0.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -46,7 +45,6 @@
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
@@ -64,9 +62,12 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "12.1.0",
+    "vue": "^2.4.1",
+    "vue-loader": "^12.2.2",
+    "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "^2.4.1",
+    "vuex": "^2.3.1",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.11.0",
