--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "url-loader": "^0.5.8",
     "vue": "^2.4.1",
     "vue-loader": "^13.0.2",
+    "vue-meta": "^1.0.4",
     "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.1",
