--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
   "plugins": ["transform-runtime"],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
+      "presets": [["env", { "modules": false }], "stage-2"],
       "plugins": [["istanbul", { "useInlineSourceMaps": false }]]
     }
   }
