--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate for new WealthBar Vue apps",
   "author": "WealthBar <developers@wealthbar.com>",
   "private": true,
-"scripts": {
+  "scripts": {
     "dev": "DEMO_MODE=true node build/dev-server.js",
     "dev:local": "API_URL=http://localhost:3000/api node build/dev-server.js",
     "prod": "API_URL=https://localhost:3000/api node build/prod-server.js",
@@ -16,7 +16,8 @@
     "test:debug": "NODE_ENV=test node inspect -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec",
     "test:coverage": "nyc -r text-summary -r html yarn test",
     "coverage": "yarn run test:coverage; open coverage/index.html",
-    "ci": "yarn run lint && yarn run test:coverage"
+    "ci": "yarn run lint && yarn run test:coverage",
+    "svg": "vsvg -s ./src/assets/icons -t ./src/lib/icons"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
@@ -75,6 +76,7 @@
     "vue-meta": "^1.0.4",
     "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
+    "vue-svgicon": "^1.2.4",
     "vue-template-compiler": "^2.4.1",
     "vuex": "^2.3.1",
     "webpack": "^2.7.0",
