--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ test:
   services:
   script:
   - yarn install
-  - yarn global node-sass
+  - yarn add global node-sass
   - yarn run ci
   artifacts:
     paths:
