--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "global": "^4.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -54,7 +55,7 @@
     "html-webpack-plugin": "^2.29.0",
     "http-proxy-middleware": "^0.17.3",
     "make-dir": "^1.0.0",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.3",
     "nyc": "^11.0.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
