--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "DEMO_MODE=true node build/dev-server.js",
-    "dev:local": "API_URL=http://localhost:3000/api node build/dev-server.js",
+    "dev:local": "DEMO_MODE=false API_URL=http://localhost:3000/api node build/dev-server.js",
     "prod": "API_URL=https://localhost:3000/api node build/prod-server.js",
     "start": "node build/prod-server.js",
     "build": "node build/build.js",
