--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "express": "^4.15.3",
     "global": "^4.3.2"
   },
+  "optionalDependencies": {
+    "chalk": "^2.3.2"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "avoriaz": "^2.4.3",
@@ -37,7 +40,6 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "browser-env": "^3.1.0",
-    "chalk": "^2.3.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.1.1",
