--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "global": "^4.3.2"
   },
   "optionalDependencies": {
-    "chalk": "^2.3.2"
+    "chalk": "^2.3.2",
+    "semver": "^5.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -64,7 +65,6 @@
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
-    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.3.7",
     "stylelint": "^7.13.0",
