--- a/package.json
+++ b/package.json
@@ -25,10 +25,6 @@
     "express": "^4.15.3",
     "global": "^4.3.2"
   },
-  "optionalDependencies": {
-    "chalk": "^2.3.2",
-    "semver": "^5.3.0"
-  },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "avoriaz": "^2.4.3",
@@ -41,6 +37,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "browser-env": "^3.1.0",
+    "chalk": "^2.3.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.1.1",
@@ -65,6 +62,7 @@
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.3.7",
     "stylelint": "^7.13.0",
