--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "svg": "vsvg -s ./src/assets/icons -t ./src/lib/icons"
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
     "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.3",
-    "global": "^4.3.2"
+    "express": "^4.15.3"
   },
   "devDependencies": {
+    "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
     "avoriaz": "^2.4.3",
     "axios": "^0.16.2",
