Remove build-arg from Dockerfile build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ variables:
 
 .build_image: &build_image
   - docker login $CONTAINER_REGISTRY -u $REGISTRY_USER -p $REGISTRY_KEY
-  - docker build --build-arg CI_COMMIT_SHA=$CI_COMMIT_SHA --build-arg -t $CONTAINER_TAG .
+  - docker build --build-arg CI_COMMIT_SHA=$CI_COMMIT_SHA -t $CONTAINER_TAG .
   - docker push $CONTAINER_TAG
 
 .deploy_image: &deploy_image
