Add curl to the deploy step

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ deploy:
     name: production
     url: https://peak.wealth.bar
   script:
+    - apk add --no-cache curl
     - mkdir -p /etc/deploy/
     - "curl --request GET --url https://api.digitalocean.com/v2/kubernetes/clusters/$DO_CLUSTER_ID/kubeconfig --header 'authorization: Bearer $DO_TOKEN' | base64 -d > ${KUBECONFIG}"
     - kubectl set image deployments/peak-deployment peak=quay.io/wealthbar/$CI_PROJECT_PATH:$CI_COMMIT_SHA
