--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,9 +1,10 @@
 {
-  "processors": ["stylelint-processor-html"],
-  "extends": "stylelint-config-standard",
+  "extends": "stylelint-config-recommended-scss",
   "rules": {
     "no-empty-source": null,
     "at-rule-empty-line-before": null,
-    "selector-list-comma-newline-after": null
+    "selector-list-comma-newline-after": null,
+    "no-descending-specificity": null,
+    "font-weight-notation": "named-where-possible",
   }
 }
