--- a/package.json
+++ b/package.json
@@ -21,9 +21,33 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.3"
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "express": "^4.15.3",
+    "file-loader": "^3.0.1",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.0.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.1",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "vue": "^2.6",
+    "vue-form": "^4.4.0",
+    "vue-loader": "^15.0.0",
+    "vue-meta": "^1.0.4",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.0.0",
+    "vue-svgicon": "^3.2.5",
+    "vue-template-compiler": "^2.6.9",
+    "vue-touch": "^2.0.0-beta.4",
+    "vuex": "^3.0.0",
+    "webpack": "^4.0.0",
+    "webpack-merge": "^4.0.0"
   },
   "devDependencies": {
+    "@vue/component-compiler": "^3.6.0",
+    "@vue/test-utils": "^1.0.0-beta.28",
     "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
     "avoriaz": "^2.4.3",
@@ -39,56 +63,41 @@
     "chalk": "^2.3.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^4.1.1",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-friendly-formatter": "^4.0.0",
     "eslint-import-resolver-node": "^0.3.1",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-vue": "^5.1.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.29.0",
+    "html-webpack-plugin": "^3.0.0",
     "http-proxy-middleware": "^0.17.3",
     "make-dir": "^1.0.0",
-    "node-sass": "^4.5.3",
     "nyc": "^11.0.3",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "ora": "^1.2.0",
+    "postcss": "^7.0.14",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.3.7",
-    "stylelint": "^7.13.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-processor-html": "^1.0.0",
-    "stylelint-webpack-plugin": "^0.8.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
     "url-loader": "^0.5.8",
-    "vue": "^2.4.1",
-    "vue-loader": "^13.0.2",
-    "vue-meta": "^1.0.4",
-    "vue-router": "^2.7.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-svgicon": "^1.2.4",
-    "vue-template-compiler": "^2.4.1",
-    "vuex": "^2.3.1",
-    "webpack": "^2.7.0",
-    "webpack-bundle-analyzer": "^2.8.3",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0",
+    "webpack-bundle-analyzer": "^3.0.0",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.0.0",
+    "webpack-node-externals": "^1.0.0",
     "wprun": "^1.0.2"
   },
   "engines": {
     "node": ">= 8.0.0",
-    "npm": ">= 5.0.0"
+    "yarn": ">= 1.0.0"
   },
   "nyc": {
     "all": false,
