--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
+    "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.15.3",
@@ -32,6 +33,7 @@
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.1",
     "stylelint-webpack-plugin": "^0.10.5",
+    "terser-webpack-plugin": "^1.2.1",
     "vue": "^2.6",
     "vue-form": "^4.4.0",
     "vue-loader": "^15.0.0",
