--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wealthbar-vue-starter",
+  "name": "peak-design",
   "version": "1.0.0",
   "description": "Boilerplate for new WealthBar Vue apps",
   "author": "WealthBar <developers@wealthbar.com>",
@@ -28,6 +28,7 @@
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
+    "opn": "^5.1.0",
     "sass-loader": "^7.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
