--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "svg": "vsvg -s ./src/assets/icons -t ./src/lib/icons"
   },
   "dependencies": {
-    "@wealthbar/peak-base.css": ">=1.0.8",
+    "@wealthbar/peak-base.css": "^1.0",
     "connect-history-api-fallback": "^1.3.0",
     "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.12.1",
