--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,12 +45,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Deploy to Kubernetes cluster
-      uses: docker://aoepeople/digital-ocean-helper:1.18.0
       env:
         CLUSTER_NAME: ${{ secrets.cluster_name }}
         DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
+      uses: docker://aoepeople/digital-ocean-helper:1.18.0
       run: |
-        doctl kubernetes cluster kubeconfig save $CLUSTER_NAME --access-token $DIGITALOCEAN_ACCESS_TOKEN
-        kubectl set image deployments/peak-deployment peak=quay.io/wealthbar/peak-design-system:${GITHUB_SHA}
+        "doctl kubernetes cluster kubeconfig save $CLUSTER_NAME --access-token $DIGITALOCEAN_ACCESS_TOKEN"
+        "kubectl set image deployments/peak-deployment peak=quay.io/wealthbar/peak-design-system:${GITHUB_SHA}"
     
     needs: build
