--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,14 +43,13 @@ jobs:
     
   deploy:
     runs-on: ubuntu-latest
-    steps:
-    - name: Set up DigitalOcean helpers
-      uses: docker://aoepeople/digital-ocean-helper:1.18.0
-    
-    - name: Deploy to Kubernetes cluster
+    container:
+      image: aoepeople/digital-ocean-helper:1.18.0
       env:
         CLUSTER_NAME: ${{ secrets.cluster_name }}
         DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
+    steps:
+    - name: Deploy to Kubernetes cluster
       run: |
         "doctl kubernetes cluster kubeconfig save $CLUSTER_NAME --access-token $DIGITALOCEAN_ACCESS_TOKEN"
         "kubectl set image deployments/peak-deployment peak=quay.io/wealthbar/peak-design-system:${GITHUB_SHA}"
