--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,27 @@ jobs:
         docker pull $CONTAINER_IMAGE:latest || true
         docker build --cache-from $CONTAINER_IMAGE:latest --build-arg CI_COMMIT_SHA=$GITHUB_SHA -t $CONTAINER_IMAGE:$GITHUB_SHA -t $CONTAINER_IMAGE:latest .
         docker push $CONTAINER_IMAGE:$GITHUB_SHA
-        docker push $CONTAINER_IMAGE:latest
       
     needs: [test]
+    
+  update_latest_image:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    
+    - name: Update latest image on Quay
+      env:
+        CONTAINER_IMAGE: quay.io/wealthbar/peak-design-system
+        CONTAINER_REGISTRY: quay.io/wealthbar
+        REGISTRY_USER: ${{ secrets.registry_user }}
+        REGISTRY_KEY: ${{ secrets.registry_key }}
+      run: |
+        docker login $CONTAINER_REGISTRY -u $REGISTRY_USER -p $REGISTRY_KEY
+        docker pull $CONTAINER_IMAGE:$GITHUB_SHA
+        docker tag $CONTAINER_IMAGE:$GITHUB_SHA $CONTAINER_IMAGE:latest
+        docker push $CONTAINER_IMAGE:latest
+      
+    needs: [build]
     
   deploy:
     runs-on: ubuntu-latest
@@ -66,4 +84,4 @@ jobs:
         entrypoint: sh
         args: -l -c "kubectl --kubeconfig=$HOME/.kubeconfig rollout status deployment/$DEPLOYMENT"
     
-    needs: build
+    needs: [build, test]
