--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "test:coverage": "nyc -r text-summary -r html yarn test",
     "coverage": "yarn run test:coverage; open coverage/index.html",
     "ci": "yarn run lint && yarn run test:coverage",
-    "svg": "vsvg -s ./src/assets/icons -t ./src/lib/icons"
   },
   "dependencies": {
     "@wealthbar/peak-base.css": "^1.0",
-    "connect-history-api-fallback": "^1.3.0",
     "compression-webpack-plugin": "^2.0.0",
+    "connect-history-api-fallback": "^1.3.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.15.3",
@@ -40,9 +39,9 @@
     "vue-form": "^4.4.0",
     "vue-loader": "^15.0.0",
     "vue-meta": "^1.0.4",
+    "vue-prism": "^1.0.5",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.0.0",
-    "vue-svgicon": "^3.2.5",
     "vue-template-compiler": "^2.6.9",
     "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.0.0",
