--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:debug": "NODE_ENV=test node inspect -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec",
     "test:coverage": "nyc -r text-summary -r html yarn test",
     "coverage": "yarn run test:coverage; open coverage/index.html",
-    "ci": "yarn run lint && yarn run test:coverage",
+    "ci": "yarn run lint && yarn run test:coverage"
   },
   "dependencies": {
     "@wealthbar/peak-base.css": "^1.0",
