--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ci": "yarn run lint && yarn run test:coverage"
   },
   "dependencies": {
-    "@wealthbar/peak-base.css": "^1.0",
+    "@wealthbar/peak-style": "^1.0",
     "compression-webpack-plugin": "^2.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "eslint": "^5.12.1",
