--- a/kube/peak-certificate.yaml
+++ b/kube/peak-certificate.yaml
@@ -2,17 +2,17 @@ apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
   name: peak-wealth-bar-prod
-  namespace: default
+  namespace: wealthbar
 spec:
   secretName: peak-wealth-bar-prod-tls
   issuerRef:
     name: letsencrypt
   commonName: peak.wealth.bar
   dnsNames:
-  - peak.wealth.bar
+    - peak.wealth.bar
   acme:
     config:
-    - http01:
-        ingressClass: nginx
-      domains:
-      - peak.wealth.bar
+      - http01:
+          ingressClass: nginx
+        domains:
+          - peak.wealth.bar
